Renaming for the Rest API service

--- a/ServiceREST/Properties/launchSettings.json
+++ b/ServiceREST/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "EjemploServicioREST": {
+    "ServiceREST": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
